# rusty-endsong-parser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: printing_top.rs  search.rs
endsong_ui/: Cargo.toml
endsong_ui/benches/: plots.rs
endsong_ui/endsong_macros/: Cargo.toml
endsong_ui/endsong_macros/src/: lib.rs
endsong_ui/src/: lib.rs  main.rs  plot.rs  print.rs  summarize.rs  trace.rs  ui.rs
endsong_ui/src/plot/: absolute.rs  relative.rs
endsong_ui/src/ui/: help.rs  mod.rs
endsong_ui/templates/: README.md  artist.html  base_style.css  package-lock.json  tailwind.config.js  tailwind_style.css
endsong_web/: Cargo.toml
endsong_web/src/: album.rs  artist.rs  artists.rs  history.rs  layers.rs  lib.rs  main.rs  song.rs  static.rs
endsong_web/static/: tailwind_style.css
endsong_web/templates/: 404.html  404_ctx.html  README.md  album.html  album_selection.html  artist.html  artist_selection.html  artists.html  artists_search.html  base.html  history.html  history_datepicker.html  history_elements.html  index.html  package-lock.json  package.json  song.html  tailwind.config.js  tailwind_style.css  top_artists.html
src/: aspect.rs  display.rs  entry.rs  find.rs  gather.rs  lib.rs  main.rs  parse.rs  plot.rs  print.rs  types.rs  ui.rs
src/display/: date.rs
src/plot/: absolute.rs  relative.rs
src/ui/: help.rs
stuff/: ideas.md  notes.md
stuff/example_endsong/: endsong_0.json
