[package]
name = "endsong"
version = "0.2.0"
authors = ["Filip Tomaśko <shader301270@gmail.com>"]
edition = "2021"
rust-version = "1.83"
description = "Library for getting data from Spotify endsong.json files"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
chrono = "0.4"
itertools = "0.13"
tracing = "0.1"
thiserror = "2.0"
unicase = "2.8"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[profile.release]
# for profiling with cargo-instruments/flamegraph-rs
debug = true

[[bench]]
name = "search"
harness = false
