[package]
name = "endsong_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
endsong = { path = ".." }
rustyline = {git = "https://github.com/fsktom/rustyline.git", features = ["derive"]}
# rustyline = { version = "12.*", features = ["derive"] }
unicode-width = "0.1.10"
# plotly = "0.8"
plotly = { git = "https://github.com/fsktom/plotly.git", branch = "from" }
itertools = "0.11.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "plots"
harness = false
