[package]
name = "endsong_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
endsong = { path = ".." }
rustyline = { version = "13.*", features = ["derive"] }
unicode-width = "0.1.11"
# plotly = "0.8"
plotly = { git = "https://github.com/fsktom/plotly.git", branch = "from" }
itertools = "0.12"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "plots"
harness = false
