[package]
name = "endsong_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
endsong = { path = ".." }
# rustyline = { version = "14.*", features = ["derive"] }
rustyline = { git = "https://github.com/kkawakam/rustyline", rev = "4363c5b", features = [
    "derive",
] }
plotly = "0.10"
itertools = "0.13"
textwrap = "0.16"
thiserror = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
endsong_macros = { path = "endsong_macros" }
rinja = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "plots"
harness = false
