[package]
name = "endsong_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["form"] }
tower-http = { version = "0.6", features = ["compression-br"] }
endsong = { path = ".." }
itertools = "0.13"
rinja = { version = "0.3", features = ["with-axum", "code-in-doc"] }
rinja_axum = "0.3"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = "0.9"
urlencoding = "2.1"
serde = "1.0"
plotly = { version = "0.10", features = ["with-axum"] }
